Change url for Payment Service

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -16,7 +16,7 @@ sites:
   - name: Notifications
     url: https://api.notifications.prd.goaptive.com
   - name: Payment Service API
-    url: https://api.payment-service.prd.goaptive.com
+    url: https://api.aptive.tech/payments/health
   - name: Sales API
     url: https://api.sales-app.prd.goaptive.com/health-check
   - name: Sales Planning Tool
